# ai-study-planner-agents

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  study_planner.ipynb
examples/: sample_input.json  sample_output.md
notebooks/: study_planner_demo.ipynb
src/study_planner/: __init__.py  agents.py  config.py  difficulty.py  evaluation.py  runner.py  tasks.py  tools.py
tests/: test_config.py  test_evaluation.py  test_project_layout.py  test_tools.py
