[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-study-planner-agents"
version = "0.1.0"
description = "Multi-agent AI study planner using CrewAI, OpenAI, sentence-transformer difficulty classification, and structured evaluation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Yehia-Alsaeed", email = "yehias3eed11@gmail.com" }
]
dependencies = [
  "crewai[litellm]",
  "crewai-tools",
  "sentence-transformers",
  "python-dotenv"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "nbformat>=5.10"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
